--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
           path: public/
     
   test:
-
+    needs: build
     runs-on: ubuntu-latest
 
     strategy:
@@ -42,7 +42,8 @@ jobs:
       with:
         name: webpack artifacts
         path: public
-    - name: npm install, and test
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
     - name: npm install, and test
